# copybot

./: .gitignore  .snyk  Dockerfile  Pipfile  README.md  main.py  pyproject.toml  settings.py  setup.py
.github/workflows/: ci.yaml
copybot/: __init__.py  cli.py
s/: restart.sh  start.sh  startup.sh  stop.sh
