[tool.poetry]
name = "copybot"
version = "0.0.0"
description = "Ships events from RabbitMQ to Postgres"
authors = ["Chris Pressland <mail@cpressland.io>"]
readme = "README.md"
repository = "https://github.com/binkhq/copybot"

[tool.poetry.scripts]
copybot = "copybot.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.4"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
pika = "^1.3.0"
python-json-logger = "^2.0.4"
click = "^8.1.3"
prometheus-client = "^0.15.0"

[tool.poetry.group.dev.dependencies]
Flake8-pyproject = "^1.1.0.post0"
isort = "^5.10.1"
black = "^22.10.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
